feat: Agregar métodos para desasignar oficinas, empleados y equipos en los controladores y servicios correspondientes
